# doctest-discover

./: .travis.yml  doctest-discover.cabal
app/: Main.hs
src/: Config.hs  Main.hs  Runner.hs
