name:                doctest-discover
version:             0.1.0.7
synopsis:            Easy way to run doctests via cabal
description:         doctest-discover provides an easy way to run doctests via cabal
license:             PublicDomain
license-file:        LICENSE
homepage:            http://github.com/karun012/doctest-discover
author:              Karun Ramakrishnan
maintainer:          karun012@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/karun012/doctest-discover

library
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , doctest
                     , directory
                     , filepath
                     , aeson
                     , bytestring
  ghc-options:         -W
  exposed-modules:     Config, Runner
  HS-Source-Dirs:      src

executable doctest-discover
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , doctest
                     , directory
                     , filepath
                     , aeson
                     , bytestring
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  HS-Source-Dirs:      app

test-suite doctests
  default-language:    Haskell2010
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , doctest-discover
                     , doctest
  main-is:             Doctest-Main.hs
  HS-Source-Dirs:      test
  type:                exitcode-stdio-1.0
